[tool.poetry]
name = "distributed-observability-tools"
version = "0.1.0"
description = "Comprehensive observability tools for distributed systems - tracing, correlation, and metrics"
authors = ["Your Name <your-email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "distributed_observability"}]
repository = "https://github.com/your-org/distributed-observability-tools"
homepage = "https://github.com/your-org/distributed-observability-tools"

[tool.poetry.dependencies]
python = "^3.8"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-httpx = "^0.42b0"
pydantic = "^2.5.0"
httpx = {version = "^0.25.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.extras]
httpx = ["httpx"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.poetry.urls]
"Bug Reports" = "https://github.com/your-org/distributed-observability-tools/issues"
"Source" = "https://github.com/your-org/distributed-observability-tools"
